# project_my_bot

./: CMakeLists.txt  README.md  package.xml
config/: display.rviz
launch/: display.launch.py  gazebo_sim.launch.py
meshes/: base_link.stl  left_wheel_link.stl  lidar_link.stl  right_wheel_link.stl
urdf/: gazebo_properties.gazebo  main.xacro  materials.xacro  robot_structure.xacro  transformations.trans
worlds/: obstacles.world
